# spotifire

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SpotiFire.hpp
src/: Server.cpp  SpotiFire.cpp
